# random-permutation

./: Cargo.toml  README.md
src/: lib.rs  main.rs
test/: data.txt
